add an easy test case

--- a/color-contrast/index.html
+++ b/color-contrast/index.html
@@ -16,6 +16,10 @@ Intended outcome: 3 failures, each with text 'this should fail'
 			float: left;
 			clear: left;
 		}
+		#easy {
+			border: 1px solid black;
+			padding: 9px;
+		}
 		#background {
 			background-color: #0f0;
 			color: #0f0;
